apps/admin/external-dns-k8s-sigs/dev/test-k8s-sigs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-k8s-sigs-external-dns
  namespace: admin
  annotations:
    # This annotation ensures ONLY the k8s-sig external-dns manages this
    external-dns.alpha.kubernetes.io/controller: k8s-sigs
    external-dns.alpha.kubernetes.io/hostname: mytest.k8s-sig-tests.dev.platform.hmcts.net
spec:
  ingressClassName: traefik
  rules:
  - host: mytest.k8s-sigs-test.dev.platform.hmcts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: some-test-service
            port:
              number: 80
